--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANDREAS - Klaatu Suuns</title>
+    <link rel="shortcut icon" href="./img/x.svg" type="image/x-icon" />
     <link
       href="https://dpalmer.in/Peoria/css/peoria-0-6-2.min.css"
       rel="stylesheet"
     />
     <link href="./styles.css" rel="stylesheet" />
   </head>
-  <body class="overflow-h">
+  <body class="overflow-h" v-scope id="body">
     <div class="text-c fade" id="logos">
       <h1>
         <img src="./img/Andreas_Type.svg" alt="Andreas" />
@@ -28,50 +29,72 @@
       </a>
     </div>
 
-    <div v-scope id="vueComp">
+    <div id="vueComp">
       <form
         class="text-c absolute bottom center-x mb-lg fade"
         id="formName"
         @submit.prevent="strip.getPlant"
       >
-        <label for="name" class="white h4">Gana una sorpresa</label>
-        <input type="text" placeholder="Tu Nombre" v-model="name" maxlength="18"/>
+        <label for="name" class="white h4"
+          >{{ i18b[i18b.lang].formLabel }}</label
+        >
+        <input
+          type="text"
+          :placeholder="i18b[i18b.lang].placeholder"
+          v-model="name"
+          maxlength="18"
+        />
       </form>
 
       <div id="obiStrip" class="top left absolute">
         <div class="text-c p-sm">
-            <!-- TODO add english -->
-          <a class="blue mr-md">EN</a>
-          <a class="blue active">ES</a>
+          <a class="blue mr-md en-switch" @click="i18b.switchEn">EN</a>
+          <a class="blue es-switch" @click="i18b.switchEs">ES</a>
         </div>
         <div id="obiInfo" class="relative">
-          <div class="text-c p-sm border-blue">
+          <div class="text-c p-sm border-blue relative">
             <h2 class="mb-n">{{ strip.name }}</h2>
-            <h3 class="mb-n">{{ strip.plant.name }}</h3>
+            <h3 class="mb-n">{{ strip.plant[i18b.lang].name }}</h3>
             <img
               src="./img/ShareNetwork.svg"
               alt="share"
               height="24"
-              class="sharebtn icon"
+              class="icon"
+              @click.prevent="strip.share"
             />
           </div>
           <div class="p-sm border-blue">
-            <p class="justify mb-n">{{ strip.plant.info }}</p>
+            <p class="justify mb-n">{{ strip.plant[i18b.lang].info }}</p>
           </div>
-          <img :src="strip.plant.img" :alt="strip.plant.name" width="360" />
-        </div>
-        <div class="text-c p-sm">
-            <p>
-                Comparte lo que te salió y participa para ganar un cassette de
-                PANORAMAS
-            </p>
-            <a target="_blank" class="button white blue-bg sharebtn">Compartir</a>
+          <img
+            :src="strip.plant.img.src"
+            :alt="strip.plant[i18b.lang].name"
+            width="360"
+          />
+          <div class="text-c p-sm">
+            <h3>Tu canción</h3>
+            <a
+              :href="strip.plant.song.url"
+              class="d-block button white blue-bg m-n"
+            >
+              {{ strip.plant.song.name }}
+            </a>
+          </div>
         </div>
         <div class="text-c p-sm border-blue">
-            Ve el video de ANDREAS
+          <p class="mb-sm">{{ i18b[i18b.lang].shareText }}</p>
+          <a
+            target="_blank"
+            class="button white blue-bg d-block m-n"
+            @click.prevent="strip.share"
+            >{{ i18b[i18b.lang].shareCTA }}</a
+          >
         </div>
-        <a href="https://youtu.be">
-            <img src="" alt="" width="360">
+        <div class="text-c p-sm border-blue">
+          {{ i18b[i18b.lang].videoCTA }}
+        </div>
+        <a href="https://youtu.be" class="d-block m-n">
+          <img src="" alt="" width="360" />
         </a>
       </div>
     </div>
@@ -92,14 +115,25 @@
     <script src="js/md5.min.js"></script>
     <script type="module">
       import { createApp, reactive } from "https://unpkg.com/petite-vue?module";
-      import { plants } from "./infoEs.mjs";
+      import { plants } from "./js/output.js";
 
       const strip = reactive({
-        name: "",
         plant: {
-          name: "Narciso",
-          info: "Lorem ipsum dolor sit amet. Nessun dorma principessa",
-          img: "./img/narciso.jpg",
+          es: {
+            name: "Nombre español",
+            info: "Info español",
+          },
+          en: {
+            name: "Nombre inglés",
+            info: "Info inglés ",
+          },
+          song: {
+            name: "Canción ",
+            url: "Canción ",
+          },
+          img: {
+            src: "./img/plants/narciso.jpeg",
+          },
         },
         getPlant(ev) {
           this.name = ev.target[0].value;
@@ -110,12 +144,68 @@
             for (var i = 0; i < md5.length; i++) {
               hash += hashStr.charCodeAt(i);
             }
-            this.plant = plants[hash % plants.length];
+            const keys = Object.keys(plants);
+            this.plant = plants[keys[hash % keys.length]];
+          }
+        },
+        share(ev) {
+          if (navigator.share) {
+            navigator
+              .share({
+                title: this.plant[i18b.lang].name,
+                text: this.plant[i18b.lang].name,
+                url: window.location.href,
+                img: this.plant.img.src
+              })
+              .then(() => {
+                console.log("Thanks for sharing!");
+              })
+              .catch((err) => {
+                console.log(`Couldn't share because of`, err.message);
+              });
+          } else {
+            window.open(`https://twitter.com/intent/tweet?url=http%3A%2F%2F192.168.68.125%3A5500&text=A%20m%ED%20me%20toc%F3%20${this.plant.es.name}%2C%20t%FA%20qu%E9%20eres%3F`, '_blank');
           }
         },
       });
 
-      createApp({ strip }).mount("#vueComp");
+      const i18b = reactive({
+        lang: "es",
+        es: {
+          formLabel: "Gana una sorpresa",
+          placeholder: "Tu Nombre",
+          shareText:
+            "Comparte lo que te salió y participa para ganar un cassette de PANORAMAS",
+          shareCTA: "Compartir",
+          viewCTA: "Ve el video de ANDREAS",
+        },
+        en: {
+          formLabel: "Win a surprise",
+          placeholder: "Your Name",
+          shareText:
+            "Share what you got for a chance to win a PANORAMAS cassette",
+          shareCTA: "Share",
+          viewCTA: "Watch the ANDREAS video",
+        },
+        switchEn() {
+          this.lang = "en";
+          document.querySelector(".en-switch").classList.add("active");
+          document.querySelector(".es-switch").classList.remove("active");
+        },
+        switchEs() {
+          this.lang = "es";
+          document.querySelector(".en-switch").classList.remove("active");
+          document.querySelector(".es-switch").classList.add("active");
+        },
+      });
+
+      createApp({ i18b, strip }).mount("#body");
+
+      if ("es" in window.navigator.languages) {
+        i18b.switchEs();
+      } else {
+        i18b.switchEn();
+      }
     </script>
   </body>
 </html>
