--- a/index.html
+++ b/index.html
@@ -5,6 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANDREAS - Klaatu Suuns</title>
+    <!-- Primary Meta Tags -->
+    <title>ANDREAS - Klaatu Suuns x Speck Joliet</title>
+    <meta name="title" content="ANDREAS - Klaatu Suuns x Speck Joliet" />
+    <meta
+      name="description"
+      content="Watch the new music video for ANDREAS and participate to win a PANORAMAS cassette."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dpalmer.in/Andreas" />
+    <meta property="og:title" content="ANDREAS - Klaatu Suuns x Speck Joliet" />
+    <meta
+      property="og:description"
+      content="Watch the new music video for ANDREAS and participate to win a PANORAMAS cassette."
+    />
+    <meta
+      property="og:image"
+      content="./img/tabletx675.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dpalmer.in/Andreas" />
+    <meta
+      property="twitter:title"
+      content="ANDREAS - Klaatu Suuns x Speck Joliet"
+    />
+    <meta
+      property="twitter:description"
+      content="Watch the new music video for ANDREAS and participate to win a PANORAMAS cassette."
+    />
+    <meta
+      property="twitter:image"
+      content="./img/tabletx675.jpg"
+    />
     <link rel="shortcut icon" href="./img/x.svg" type="image/x-icon" />
     <link
       href="https://dpalmer.in/Peoria/css/peoria-0-6-2.min.css"
