--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           type="text"
           :placeholder="i18b[i18b.lang].placeholder"
           v-model="name"
+          class="small"
           maxlength="15"
         />
       </form>
@@ -86,6 +87,14 @@
         <div class="text-c p-sm">
           <a class="blue mr-md en-switch" @click="i18b.switchEn">EN</a>
           <a class="blue es-switch" @click="i18b.switchEs">ES</a>
+        </div>
+        <div class="fixed center-x top white-bg z-1 d-none mr-md">
+          <textarea
+            class="small blue"
+            :value="strip.title"
+            rows="5"
+            id="altShare"
+          ></textarea>
         </div>
         <div id="obiInfo" class="relative">
           <div class="text-c p-sm border-blue relative">
@@ -172,6 +181,7 @@
             src: "./img/plants/narciso.jpeg",
           },
         },
+        title: "",
         getPlant(ev) {
           this.name = ev.target[0].value;
           if (this.name && this.name != "") {
@@ -186,16 +196,38 @@
           }
         },
         share(ev) {
-            try{
-                const data = {
-                    title: this.plant[i18b.lang].name,
-                    text: this.plant[i18b.lang].name,
-                    url: window.location.href
-                  }
-                navigator.share(data)
-            } catch (ex) {
-                window.open(`https://twitter.com/intent/tweet?url=https%3A%2F%2Fdpalmer.in%2FAndreas%3A5500&text=A%20m%ED%20me%20toc%F3%20${this.plant.es.name}%2C%20t%FA%20qu%E9%20eres%3F`, '_blank');
+          try {
+            if (i18b.lang == "es") {
+              this.title = `A mí me tocó ${this.plant[i18b.lang].name}, ¿a ti?\n\n#ANDREASMV #KlaatuSuuns`;
+            } else {
+              this.title = `I got ${
+                this.plant[i18b.lang].name
+              }, what did you get?\n\n#ANDREASMV #KlaatuSuuns`;
             }
+            const data = {
+              title: this.title,
+              url: window.location.href,
+            };
+            navigator.share(data);
+          } catch (ex) {
+            this.title += "\n" + window.location.href;
+            document
+              .getElementById("altShare")
+              .parentElement.classList.remove("d-none");
+            window.setTimeout(() => {
+              document.getElementById("altShare").select();
+              document.execCommand("copy");
+              if (navigator.clipboard) {
+                document.getElementById("altShare").setSelectionRange(0, 99999);
+                navigator.clipboard.writeText(copyText.value);
+              }
+              if (i18b.lang == 'es') {
+                confirm('No pudimos hacerlo automático, pero aquí está tu tweet')
+              } else {
+                confirm("We couldn't do it automatically, but here's your tweet")
+              }
+            }, 10)
+          }
         },
       });
 
@@ -208,7 +240,7 @@
             "Comparte lo que te salió y participa para ganar un cassette de PANORAMAS",
           shareCTA: "Compartir",
           viewCTA: "Ve el video de ANDREAS",
-          songTitle: "Tu canción"
+          songTitle: "Tu canción",
         },
         en: {
           formLabel: "Win a surprise",
@@ -217,7 +249,7 @@
             "Share what you got for a chance to win a PANORAMAS cassette",
           shareCTA: "Share",
           viewCTA: "Watch the ANDREAS video",
-          songTitle: "Your Song"
+          songTitle: "Your Song",
         },
         switchEn() {
           this.lang = "en";
