absolute image route

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="./img/tabletx675.jpg"
+      content="https://dpalmer.in/Andreas/img/tabletx675.jpg"
     />
 
     <!-- Twitter -->
@@ -39,7 +39,7 @@
     />
     <meta
       property="twitter:image"
-      content="./img/tabletx675.jpg"
+      content="https://dpalmer.in/Andreas/img/tabletx675.jpg"
     />
     <link rel="shortcut icon" href="./img/x.svg" type="image/x-icon" />
     <link
