--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://dpalmer.in/Andreas" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://dpalmer.in/Andreas" />
     <meta
-      property="twitter:title"
+      name="twitter:title"
       content="ANDREAS - Klaatu Suuns x Speck Joliet"
     />
     <meta
-      property="twitter:description"
+      name="twitter:description"
       content="Watch the new music video for ANDREAS and participate to win a PANORAMAS cassette."
     />
     <meta
-      property="twitter:image"
+      name="twitter:image"
       content="https://dpalmer.in/Andreas/img/tabletx675.jpg"
     />
     <link rel="shortcut icon" href="./img/x.svg" type="image/x-icon" />
