--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
             }
             const data = {
               title: this.title,
+              text: this.text,
               url: window.location.href,
             };
             navigator.share(data);
