removed newlines hashtags

--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
         share(ev) {
           try {
             if (i18b.lang == "es") {
-              this.title = `A mí me tocó ${this.plant[i18b.lang].name}, ¿a ti?\n\n#ANDREASMV #KlaatuSuuns`;
+              this.title = `A mí me tocó ${this.plant[i18b.lang].name}, ¿a ti? #ANDREASMV #KlaatuSuuns`;
             } else {
               this.title = `I got ${
                 this.plant[i18b.lang].name
-              }, what did you get?\n\n#ANDREASMV #KlaatuSuuns`;
+              }, what did you get? #ANDREASMV #KlaatuSuuns`;
             }
             const data = {
               title: this.title,
