--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="text-c center-a fade">
-      <a href="./" class="text-c">
+      <a href="https://www.youtube.com/watch?v=QnyxhXzLZs8" class="text-c" target="_blank">
         <img src="./img/play_circle_filled.svg" alt="Play Icon" id="playIcon" />
       </a>
     </div>
@@ -100,13 +100,6 @@
           <div class="text-c p-sm border-blue relative">
             <h2 class="mb-n">{{ strip.name }}</h2>
             <h3 class="mb-n">{{ strip.plant[i18b.lang].name }}</h3>
-            <img
-              src="./img/ShareNetwork.svg"
-              alt="share"
-              height="24"
-              class="icon"
-              @click.prevent="strip.share"
-            />
           </div>
           <div class="p-sm border-blue">
             <p class="justify mb-n">{{ strip.plant[i18b.lang].info }}</p>
@@ -131,16 +124,13 @@
           <p class="mb-sm">{{ i18b[i18b.lang].shareText }}</p>
           <a
             target="_blank"
-            class="button white blue-bg d-block m-n"
-            @click.prevent="strip.share"
-            >{{ i18b[i18b.lang].shareCTA }}</a
-          >
+            class="d-block button white blue-bg m-n"
+            :href="strip.tweet"
+            >{{ i18b[i18b.lang].shareCTA }}
+          </a>
         </div>
-        <div class="text-c p-sm border-blue">
-          {{ i18b[i18b.lang].videoCTA }}
-        </div>
-        <a href="https://youtu.be" class="d-block m-n">
-          <img src="" alt="" width="360" />
+        <a href="https://www.youtube.com/watch?v=QnyxhXzLZs8" class="d-block m-n">
+          <img src="./img/tabletx675.jpg" alt="" width="360" />
         </a>
       </div>
     </div>
@@ -160,117 +150,92 @@
     </footer>
     <script src="js/md5.min.js"></script>
     <script type="module">
-      import { createApp, reactive } from "https://unpkg.com/petite-vue?module";
-      import { plants } from "./js/output.js";
+        import { createApp, reactive } from "https://unpkg.com/petite-vue?module";
+        import { plants } from "./js/output.js";
 
-      const strip = reactive({
-        plant: {
+        const strip = reactive({
+          plant: {
+            es: {
+              name: "Nombre español",
+              info: "Info español",
+            },
+            en: {
+              name: "Nombre inglés",
+              info: "Info inglés ",
+            },
+            song: {
+              name: "Canción ",
+              url: "Canción ",
+            },
+            img: {
+              src: "./img/plants/narciso.jpeg",
+            },
+          },
+          tweet: "",
+          getPlant(ev) {
+            this.name = ev.target[0].value;
+            if (this.name && this.name != "") {
+              document.getElementById("obiStrip").classList.add("open");
+              var hashStr = md5(name.toLowerCase()),
+                hash = 0;
+              for (var i = 0; i < md5.length; i++) {
+                hash += hashStr.charCodeAt(i);
+              }
+              const keys = Object.keys(plants);
+              this.plant = plants[keys[hash % keys.length]];
+            }
+            
+            this.tweet = 'https://twitter.com/intent/tweet?text=';
+            if (i18b.lang == "es") {
+              this.tweet += encodeURIComponent(`A mí me tocó ${this.plant[i18b.lang].name}, ¿a ti?\n\n#ANDREASMV #KlaatuSuuns\n`);
+            } else {
+              this.tweet += encodeURIComponent(`I got ${
+                this.plant[i18b.lang].name
+              }, what did you get?\n\n#ANDREASMV #KlaatuSuuns\n`);
+            }
+            this.tweet += "&url=" + encodeURIComponent('https://dpalmer.in/Andreas')
+          }
+        });
+
+        const i18b = reactive({
+          lang: "es",
           es: {
-            name: "Nombre español",
-            info: "Info español",
+            formLabel: "Gana una sorpresa",
+            placeholder: "Tu Nombre",
+            shareText:
+              "Comparte lo que te salió y participa para ganar un cassette de PANORAMAS",
+            shareCTA: "Tweet",
+            viewCTA: "Ve el video de ANDREAS",
+            songTitle: "Tu canción",
           },
           en: {
-            name: "Nombre inglés",
-            info: "Info inglés ",
+            formLabel: "Win a surprise",
+            placeholder: "Your Name",
+            shareText:
+              "Share what you got for a chance to win a PANORAMAS cassette",
+            shareCTA: "Tweet",
+            viewCTA: "Watch the ANDREAS video",
+            songTitle: "Your Song",
           },
-          song: {
-            name: "Canción ",
-            url: "Canción ",
+          switchEn() {
+            this.lang = "en";
+            document.querySelector(".en-switch").classList.add("active");
+            document.querySelector(".es-switch").classList.remove("active");
           },
-          img: {
-            src: "./img/plants/narciso.jpeg",
+          switchEs() {
+            this.lang = "es";
+            document.querySelector(".en-switch").classList.remove("active");
+            document.querySelector(".es-switch").classList.add("active");
           },
-        },
-        title: "",
-        getPlant(ev) {
-          this.name = ev.target[0].value;
-          if (this.name && this.name != "") {
-            document.getElementById("obiStrip").classList.add("open");
-            var hashStr = md5(name),
-              hash = 0;
-            for (var i = 0; i < md5.length; i++) {
-              hash += hashStr.charCodeAt(i);
-            }
-            const keys = Object.keys(plants);
-            this.plant = plants[keys[hash % keys.length]];
-          }
-        },
-        share(ev) {
-          try {
-            if (i18b.lang == "es") {
-              this.title = `A mí me tocó ${this.plant[i18b.lang].name}, ¿a ti? #ANDREASMV #KlaatuSuuns\n`;
-            } else {
-              this.title = `I got ${
-                this.plant[i18b.lang].name
-              }, what did you get? #ANDREASMV #KlaatuSuuns\n`;
-            }
-            this.title += window.location.href
-            const data = {
-              title: this.title,
-              text: this.text
-            };
-            navigator.share(data);
-          } catch (ex) {
-            this.title += "\n" + window.location.href;
-            document
-              .getElementById("altShare")
-              .parentElement.classList.remove("d-none");
-            window.setTimeout(() => {
-              document.getElementById("altShare").select();
-              document.execCommand("copy");
-              if (navigator.clipboard) {
-                document.getElementById("altShare").setSelectionRange(0, 99999);
-                navigator.clipboard.writeText(copyText.value);
-              }
-              if (i18b.lang == 'es') {
-                confirm('No pudimos hacerlo automático, pero aquí está tu tweet')
-              } else {
-                confirm("We couldn't do it automatically, but here's your tweet")
-              }
-            }, 10)
-          }
-        },
-      });
+        });
 
-      const i18b = reactive({
-        lang: "es",
-        es: {
-          formLabel: "Gana una sorpresa",
-          placeholder: "Tu Nombre",
-          shareText:
-            "Comparte lo que te salió y participa para ganar un cassette de PANORAMAS",
-          shareCTA: "Compartir",
-          viewCTA: "Ve el video de ANDREAS",
-          songTitle: "Tu canción",
-        },
-        en: {
-          formLabel: "Win a surprise",
-          placeholder: "Your Name",
-          shareText:
-            "Share what you got for a chance to win a PANORAMAS cassette",
-          shareCTA: "Share",
-          viewCTA: "Watch the ANDREAS video",
-          songTitle: "Your Song",
-        },
-        switchEn() {
-          this.lang = "en";
-          document.querySelector(".en-switch").classList.add("active");
-          document.querySelector(".es-switch").classList.remove("active");
-        },
-        switchEs() {
-          this.lang = "es";
-          document.querySelector(".en-switch").classList.remove("active");
-          document.querySelector(".es-switch").classList.add("active");
-        },
-      });
+        createApp({ i18b, strip }).mount("#body");
 
-      createApp({ i18b, strip }).mount("#body");
-
-      if ("es" in window.navigator.languages) {
-        i18b.switchEs();
-      } else {
-        i18b.switchEn();
-      }
+        if ("es" in window.navigator.languages) {
+          i18b.switchEs();
+        } else {
+          i18b.switchEn();
+        }
     </script>
   </body>
 </html>
