final video link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="text-c center-a fade">
       <a
-        href="https://www.youtube.com/watch?v=QnyxhXzLZs8"
+        href="https://youtu.be/4i_OoRQT4a4"
         class="text-c"
         target="_blank"
       >
@@ -134,7 +134,7 @@
           </a>
         </div>
         <a
-          href="https://www.youtube.com/watch?v=QnyxhXzLZs8"
+          href="https://youtu.be/4i_OoRQT4a4"
           class="d-block m-n"
         >
           <img src="./img/tabletx675.jpg" alt="" width="360" />
